<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">Tuner</string>
  <string name="help">Help</string>
  <string name="settings">Settings</string>
  <string name="copyright">Copyright \u00A9 2014 Bill Farmer</string>
  <string name="translation">
    Spanish translation by Suso Comesaña\n
    Hungarian translation by András Lengyel-Nagy
  </string>
  <string name="licence">Licence: GNU GPLv3</string>

  <string name="error_buffer">Error from audio recording! Cannot find a working input sample rate.</string>
  <string name="error_init">Audio recorder not initialised! Maybe the selected input source is not available, or a working input sample rate could not be found.</string>

  <string name="filter_on">Audio filter on</string>
  <string name="filter_off">Audio filter off</string>

  <string name="zoom_on">Spectrum zoom on</string>
  <string name="zoom_off">Spectrum zoom off</string>

  <string name="lock_on">Display lock on</string>
  <string name="lock_off">Display lock off</string>

  <string name="screen_on">Keep screen on</string>
  <string name="screen_off">Don\'t keep screen on</string>

  <string name="strobe_on">Strobe on</string>
  <string name="strobe_off">Strobe off</string>

  <string name="downsample_on">Downsampling on</string>
  <string name="downsample_off">Downsampling off</string>

  <string name="multiple_on">Multiple notes on</string>
  <string name="multiple_off">Multiple notes off</string>

  <string name="copied_clip">Data copied to clipboard</string>
  <string name="sample_rate">Sample rate: %d samples/sec</string>

  <string name="filter">filter</string>
  <string name="zoom">zoom</string>
  <string name="lock">lock</string>
  <string name="display">screen</string>
  <string name="strobe">strobe</string>
  <string name="downsample">downsample</string>
  <string name="multiple">multiple</string>

  <string name="def_custom">[-1073807360,-1090518785]</string>

  <string name="pref_input_category">Input</string>

  <string name="pref_input">Input source</string>
  <string name="pref_input_summ">%s"</string>

  <string name="pref_filter">Audio filter</string>
  <string name="pref_filter_summ">Filter input audio</string>

  <string name="pref_downsample">Downsample</string>
  <string name="pref_downsample_summ">Downsample input before analysis</string>

  <string name="pref_display">Display</string>

  <string name="pref_screen">Screen</string>
  <string name="pref_screen_summ">Keep screen on</string>

  <string name="pref_zoom">Zoom spectrum</string>
  <string name="pref_zoom_summ">Zoom in to current note on spectrum display</string>

  <string name="pref_multiple">Multiple notes</string>
  <string name="pref_multiple_summ">Show multiple notes on display</string>

  <string name="pref_strobe">Strobe</string>
  <string name="pref_strobe_screen">Strobe settings</string>
  <string name="pref_strobe_summ">Show the strobe display</string>

  <string name="pref_colour">Strobe colours</string>
  <string name="pref_colour_summ">Change the strobe colours</string>

  <string name="pref_custom">Custom</string>
  <string name="pref_custom_summ">Custom colours</string>

  <string name="pref_ref">Reference</string>
  <string name="pref_ref_summ">%dHz</string>

  <string name="pref_about">About</string>
  <string name="pref_about_summ">Tuner version %s</string>

</resources>
