<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    		  xmlns:tuner="http://schemas.andoid.com/apk/res/org.billthefarmer.tuner">
  <ListPreference
      android:key="pref_input"
      android:title="@string/pref_input"
      android:summary="@string/pref_input_summ"
      android:entries="@array/pref_input_entries"
      android:entryValues="@array/pref_input_entry_values"
      android:defaultValue="@integer/def_input" />
  <CheckBoxPreference
      android:key="pref_filter"
      android:title="@string/pref_filter"
      android:summary="@string/pref_filter_summ"
      android:defaultValue="true" />
  <CheckBoxPreference
      android:key="pref_down"
      android:title="@string/pref_down"
      android:summary="@string/pref_down_summ"
      android:defaultValue="false" />
  <CheckBoxPreference
      android:key="pref_zoom"
      android:title="@string/pref_zoom"
      android:summary="@string/pref_zoom_summ"
      android:defaultValue="true" />
  <CheckBoxPreference
      android:key="pref_multiple"
      android:title="@string/pref_multiple"
      android:summary="@string/pref_multiple_summ"
      android:persistent="false"
      android:defaultValue="false" />
  <CheckBoxPreference
      android:key="pref_strobe"
      android:title="@string/pref_strobe"
      android:summary="@string/pref_strobe_summ"
      android:defaultValue="true" />
  <ListPreference
      android:key="pref_sample"
      android:title="@string/pref_sample_rate"
      android:summary="@string/pref_sample_rate_summ"
      android:entries="@array/pref_sample_rate_entries"
      android:entryValues="@array/pref_sample_rate_entry_values"
      android:defaultValue="11025" />
  <org.billthefarmer.tuner.NumberPickerPreference
      android:key="pref_reference"
      android:title="@string/pref_ref"
      android:summary="@string/pref_ref_summ"
      android:defaultValue="@integer/def_ref"
      tuner:maxValue="@integer/max_ref"
      tuner:minValue="@integer/min_ref"
      android:dialogLayout="@layout/numberpicker" />
</PreferenceScreen>
